# autocheck

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml  requirements_dev.txt  setup.cfg  test.sh
autocheck/: __init__.py  cache.py  check.py  core.py  notebook_state_tracker.py
autocheck/tests/: __init__.py  test_core.py
examples/: check_function.py  check_numeric.py  check_symbolic.py  incorrect_exponents.py
