[metadata]
name = autocheck
version = 0.0.1
author = Carl Scheffler
author_email = scheffler@minerva.edu
description = Automatic checking/grading of student responses in Forum Code Workbooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/minerva-university/autocheck
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
