[metadata]
name = autocheck
version = 0.0.1
author = Carl Scheffler
author_email = scheffler@minerva.edu
description = Automatic checking/grading of student responses in Forum Code Workbooks.
long_description = file: README.md
long_description_content_type = text/markdown
license = Copyright © 2021 Minerva University. All rights reserved.
url = https://github.com/minerva-university/autocheck
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    requests-futures >= 1.0.0
